2000-06-09  Akim Demaille  <akim@epita.fr>

	`autoconf --trace' dies on filenames with `:'.
	Reported by Mark Elbrecht.

	* autoconf.sh <trace> (trace2m4.sed): Use `..*' instead of
	`[^:][^:]*' to catch file names.  The rest of regex is probably
	precise enough to avoid incorrect parsing.

2000-06-09  Akim Demaille  <akim@epita.fr>

	* acspecific.m4 (_AC_SYS_LARGEFILE_MACRO_VALUE): Always initialize
	$3 to no

2000-06-08  Paul Eggert  <eggert@twinsun.com>

	Import AC_SYS_LARGEFILE from largefile.m4 serial 12.

	* acspecific.m4 (AC_SYS_LARGEFILE, _AC_SYS_LARGEFILE_MACRO_VALUE,
	_AC_SYS_LARGEFILE_SOURCE): New.
	* doc/autoconf.texi (System Services): Document AC_SYS_LARGEFILE.

2000-06-08  Steven G. Johnson  <stevenj@alum.mit.edu>

	* aclang.m4 (AC_F77_LIBRARY_LDFLAGS): Don't override FLIBS if
	specified by the user.
	Fix a bug: use the cached value to set FLIBS.

2000-06-07  Dave Love  <fx@gnu.org>

	* aclang.m4 (AC_PROG_F77): Check for f95 and fc too.

2000-06-07  Philippe De Muyter  <phdm@macqel.be>

	`foo=1 foo=2 cmd' has an undefined behavior.

	* acgeneral.m4 (_AC_COMPUTE_INT_COMPILE): Do not put two shell
	variable assignments in one shell command.
	* doc/autoconf.texi (Shell Substitutions): Document.

2000-06-07  Steven G. Johnson  <stevenj@alum.mit.edu>

	* aclang.m4 (AC_F77_LIBRARY_LDFLAGS): Fix problem on Cray due to
	confusion from the link command getting echoed in quotes.  In the
	future, a more general fix for quoted arguments with spaces might
	be better.

2000-06-07  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Limitations of Builtins): More on `test' and
	`case'.
	Some on `if' and `break'.

2000-06-07  Morten Eriksen  <mortene@sim.no>

	* acspecific.m4 (_AC_PATH_X_DIRECT): Include `X11/Intrinsic.h'
	when trying to use `XtMalloc' to actually have a chance of
	succeeding.

2000-06-07  Akim Demaille  <akim@epita.fr>

	Hard (code) X.

	* acspecific.m4 (_AC_PATH_X_DIRECT): Hard code `X11/Intrinsic.h'